# NewYearsCards

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  AddressSheet.webloc  CHANGELOG.md  CODING_NOTES_FOR_AI.md  Makefile  README.md  SCHEMA_LABELS.md  TASKS.md  TODO.md  WORKFLOW_YEARLY.md  codecov.yml  main.py  newyearscards  pyproject.toml
.github/release-notes/: v0.2.0.md  v0.2.1.md  v0.2.2.md
.github/workflows/: ci.yml  coverage.yml  release-notes.yml  version-badge.yml
Keys/: recipients.txt
backups/: addresses-20251204-193955.tgz.age
backups/2025/: addresses-20251206-133317-903189.tgz.age  addresses-20251217-150828-096025.tgz.age
cards/2025/: IMG_5515_01.xcf
config/: address_formats.yml
docs/: CHANGELOG.md  CI.md  GOOGLE_AUTH.md  SETUP_SHEET.md  TASKS.md  TODO.md  WORKFLOW_YEARLY.md
scripts/: age_backup.py  generate_release_notes.py  update_version_badge.py
src/newyearscards/: __init__.py  addresses.py  cli.py  config.py  download_sheet.py  sheets.py
templates/envelopes/pages/: EnvelopeA9.pages
templates/envelopes/word/: ChristmasCardsLabels2022.docx  ChristmasCardsLabels2023.docx
tests/: conftest.py  test_addresses.py  test_addresses_coverage.py  test_addresses_more.py  test_cli.py  test_cli_backup.py  test_cli_errors.py  test_cli_more.py  test_cli_version.py  test_sheets.py  test_sheets_download.py
