[project]
name = "newyearscards"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "PyYAML>=6.0.2",
]

[project.scripts]
newyearscards = "newyearscards.cli:main"
