[project]
name = "newyearscards"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "PyYAML>=6.0.2",
]

[project.scripts]
newyearscards = "newyearscards.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "mypy>=1.19.0",
    "ruff>=0.6.0",
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
exclude = [
  "tests/",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["docs/"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["newyearscards"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
